# hello-world-grpc

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  conventions.md  idea.md  vision.md
.cursor/rules/: conventions.mdc  workflow.mdc
config/: settings.toml.example
doc/: manual_testing.md  tasklist.md  workflow.md
proto/: hello_world.proto
scripts/: manual_tests.sh  test_client.py
src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
src/services/: hello_world.rs
tests/: common.rs  integration_hello_world_test.rs  integration_streaming_test.rs
tests/integration/: hello_world_test.rs
