[package]
name = "hello-world-grpc"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Your Name <your.email@example.com>"]
description = "A simple gRPC Hello World service in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.225", features = ["derive"] }
config = "0.15.16"
tokio-stream = "0.1"
uuid = { version = "1.0", features = ["v4"] }
tonic-health = "0.14.2"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-prost-build = "0.14.2"

[[bin]]
name = "hello-world-grpc"
path = "src/main.rs"
